--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "gsap": "^3.11.3",
+    "next": "11.1.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "scrollmagic": "^2.0.8",
+    "scrollmagic-plugin-gsap": "^1.0.4",
+    "scrollmagic-with-ssr": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.4"
+    "eslint": "7.23.0",
+    "eslint-config-next": "11.1.4"
   }
 }
