--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "gsap": "^3.11.3",
     "next": "12.3.4",
     "react": "17.0.2",
