--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scrollmagic": "^2.3.0",
     "scrollmagic": "^2.0.8",
     "scrollmagic-plugin-gsap": "^1.0.4",
-    "scrollmagic-with-ssr": "^1.0.2"
+    "scrollmagic-with-ssr": "^1.0.2",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "eslint": "7.23.0",
